# ai-task-bot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test_code_reading.py  test_real_analysis.py  user_mappings.json  user_projects.json
docs/: research_report.md
src/: config.py
src/ai/: gemini_client.py  schemas.py  workflow.py
src/ai/agents/: analyzer.py  task_breaker.py
src/bot/: client.py
src/bot/commands/: create_task.py  get_all_task.py  get_task.py  my_tasks.py  search_task.py  stats.py  switch_project.py  update_task.py
src/github/: client.py  models.py  mutations.py  queries.py
src/repository/: analyzer.py  cloner.py  code_parser.py
src/utils/: duplicate_checker.py  logger.py  project_manager.py  rate_limiter.py  retry.py  size_converter.py  title_validator.py  user_mapping.py
